objects/Sample_Obj_20201207__c.object
<CustomObject>
    <fields>
        <fullName>SO_CF1_20201207__c</fullName>
        <label>SO CF1 20201207</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_CF2_20201207__c</fullName>
        <label>SO CF2 20201207</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SO_CF3_20201207__c</fullName>
        <label>SO CF3 20201207</label>
        <type>AutoNumber</type>
    </fields>
    <label>Sample Obj 20201207</label>
    <nameField>
        <label>Sampe Obj 20201207 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Obj 20201207</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>